@@ -30,6 +30,7 @@ Version 0.2.1
   compiler (Michael Wetherell)
 - added Mac OS X package (Kevin Ollivier)
 - added --dry-run option to bakefile and --list-files to bakefile_gen
+- correctly evaluate per-target variables in <echo> and <error>
 
 
 Version 0.2.0
